--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://serenayeee.github.io/hair-haven",
   "name": "hair-haven",
   "version": "0.1.0",
   "private": true,
@@ -13,8 +12,6 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,7 +37,6 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
-    "gh-pages": "^6.1.1"
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7"
   }
 }
